# agenc-model-registry

./: .gitignore  Anchor.toml  IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  idl.json  index.css  main.tsx
app/src/components/: AgentCard.tsx  CapabilityBadges.tsx  Header.tsx  ModelCard.tsx  StatusBadge.tsx  TaskCard.tsx  UploadProgress.tsx
app/src/hooks/: useAgents.ts  useRegistry.ts  useTasks.ts
app/src/lib/: arweave.ts  program.ts
app/src/lib/agenc/: agenc_coordination.json  constants.ts  program.ts  types.ts  utils.ts
app/src/pages/: AgentBrowse.tsx  AgentDetail.tsx  AgentRegister.tsx  Browse.tsx  ModelDetail.tsx  Publish.tsx  TaskBrowse.tsx  TaskDetail.tsx
programs/model-registry/: Cargo.toml
programs/model-registry/src/: errors.rs  events.rs  lib.rs  state.rs
scripts/: initialize-simple.js  initialize.ts
tests/: model-registry.ts
