[package]
name = "model-registry"
version = "0.1.0"
description = "Decentralized AI Model Registry on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "model_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
